--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.13.0",
     "next": "13.4.9",
     "react": "18.2.0",
+    "react-carousel-animated": "^0.1.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
